--- a/style.css
+++ b/style.css
@@ -1,20 +1,13 @@
-body{
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding:0;
-}
-.container{
-  max-width:1200px;
-  margin:0 auto;
-  padding: 20px;
-}
-@media (min-width:769px) and (max-width:1024px){
-  .container{
-      max-width:800px;
+@media only screen and (max-width:600px){
+  img{
+    max-width:130px;
+    height:auto;
   }
-} 
-@media(min-width:1025px){
-  .container{
-      max-width:1200px;
+  .profile{
+    max-width:800px;
+    height:400px;
+  }
+  .aboutme{
+    max-width:600px;
   }
 }
