--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
-@media only screen and (max-width:600px){
+@media only screen and (max-width:640px){
   img{
-    max-width:130px;
+    max-width:100px;
     height:auto;
   }
-  .profile{
-    max-width:800px;
-    height:400px;
+}
+@media only screen and (min-width:641px){
+  img{
+    max-width:160px;
+    height:auto;
   }
-  .aboutme{
-    max-width:600px;
+}
+@media only screen and (min-width:1008px){
+  img{
+    max-width:250px;
+    height:auto;
   }
 }
