--- a/style.css
+++ b/style.css
@@ -3,16 +3,25 @@
     max-width:90px;
     height:auto;
   }
+  div.name{
+    margin-left:50px;
+  }
 }
 @media only screen and (min-width:641px){
   img{
     max-width:120px;
     height:auto;
   }
+  div.name{
+    margin-left:50px;
+  }
 }
 @media only screen and (min-width:1008px){
   img{
     max-width:200px;
     height:auto;
+  }
+  div.name{
+    margin-left:50px;
   }
 }
