--- a/style.css
+++ b/style.css
@@ -1,19 +1,31 @@
 @media only screen and (max-width:640px){
   img{
-    max-width:80px;
+    max-width:170px;
     height:auto;
   }
   div.name{
     margin-left:50px;
-  }
+  } 
   div.sosmeds{
     font-size:30px;
     height:50px;
   }
+  div.sosmeds{
+    width:35%;
+    height:100px;
+    font-size:30px;
+    margin-right:0px;
+  }
+  div.aboutme{
+    width:35%;
+    height:100px;
+    font-size:30px;
+    margin-left:50px;
+  }
 }
 @media only screen and (min-width:641px){
   img{
-    max-width:120px;
+    max-width:180px;
     height:auto;
   }
   div.name{
@@ -21,7 +33,16 @@
   }
   div.sosmeds{
     font-size:45px;
-    height:60px;
+    height:70px;
+    width:43%;
+    font-size:50px;
+    margin-right:20px;
+  }
+  div.aboutme{
+    width:38%;
+    height:70px;
+    font-size:50px;
+    margin-left:50px;
   }
 }
 @media only screen and (min-width:1008px){
@@ -35,5 +56,14 @@
   div.sosmeds{
     font-size:50px;
     height:70px;
+    width:43%;
+    font-size:50px;
+    margin-right:50px;
+  }
+  div.aboutme{
+    width:43%;
+    height:70px;
+    font-size:50px;
+    margin-left:50px;
   }
 }
